[package]
name = "sudachipy"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Python bindings of sudachi.rs, the Japanese Morphological Analyzer"
readme = "README.md"
homepage.workspace = true
repository.workspace = true
license.workspace = true

[lib]
name = "sudachipy"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
scopeguard = "1" # Apache 2.0/MIT
thread_local = "1.1" # Apache 2.0/MIT

[dependencies.sudachi]
path = "../sudachi"
