[package]
name = "sudachi"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true

[dependencies] # this should be sorted
aho-corasick = "1" # MIT/Apache 2.0
bitflags = "2.5" # MIT/Apache 2.0
csv = "1.3" # Unilicense/MIT
fancy-regex = "0.13" # MIT
indexmap = "2.2" # MIT/Apache 2.0
itertools = "0.13" # MIT/Apachie 2.0
lazy_static = "1.4" # MIT/Apache 2.0
libloading = "0.8" # ISC (MIT-compatible)
memmap2 = "0.9" # MIT/Apache 2.0
nom = "7" # MIT
regex = "1" # MIT/Apache 2.0
serde = { version = "1.0", features = ["derive"] } # MIT/Apache 2.0
serde_json = "1.0" # MIT/Apache 2.0
thiserror = "1.0" # MIT/Apache 2.0
unicode-normalization = "0.1" # MIT/Apache 2.0
yada = "0.5" # MIT/Apache 2.0

[dev-dependencies]
claim = "0.5" # MIT/Apache 2.0
tempfile = "3" # MIT/Apache 2.0

# Plugins for tests
default_input_text = { path = "../plugin/input_text/default_input_text" }
simple_oov = { path = "../plugin/oov/simple_oov" }
join_numeric = { path = "../plugin/path_rewrite/join_numeric" }
join_katakana_oov = { path = "../plugin/path_rewrite/join_katakana_oov" }

[lib]
crate-type = ["rlib"]
